# ICP-HardwareAccel

./: .gitignore  .gitmodules  icp  icp.cpp  results.txt  test_pcd.pcd
ConvexHull/: README.txt  a.out  bun1.pcd  convexhull  convexhull.cpp
Fast-Robust-ICP/: CMakeLists.txt
Fast-Robust-ICP/compare_point_clouds/: CMakeLists.txt  compare_point_clouds.cpp
Fast-Robust-ICP/data/res/: m0reg_pc.ply  m0trans.txt  m1reg_pc.ply  m1trans.txt  m2reg_pc.ply  m2trans.txt  m3trans.txt
Semantic3D/: README.txt  parse.py
edge_detection/: CMakeLists.txt  edge.h  edge_detection.cpp
icp_cpu/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  edge.cpp  edge.h  icp.cpp  icp_cpu  result.pcd
icp_cpu_test/: CMakeCache.txt  CMakeLists.txt  Makefile  Point.h  cmake_install.cmake  icp.cpp  icp_cpu  icp_cpu_test  result.pcd
icp_gpu/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  icp.cpp  icp.cu  icp_gpu  icp_gpu_old.cu  result.pcd
icp_gpu_priority/: CMakeLists.txt  icp copy.cu  icp.cu
point_clouds/: enter_turn_mid_front.pcd  point_cloud1_edges.txt  point_cloud1augmented.pcd  point_cloud3.pcd  point_cloud4.pcd  point_cloud5.pcd  straight_far_front2.pcd  straight_mid_front.pcd
point_clouds/point_clouds/: enter_turn_far_front.pcd  point_cloud1.pcd  point_cloud2.pcd  straight2_far_front.pcd  straight_far_front.pcd
test/: CMakeCache.txt  CMakeLists.txt  Makefile  bunny.ply  bunny1.pcd  bunny1.ply  bunny1_timing.ply  bunny_edges.pcd  bunny_edges.txt  bunny_timing.ply  car6.pcd:Zone.Identifier  car61.pcd  car61.ply  car61_augmented.pcd  car61_augmented.ply  car61_augmented_timing.ply  car61_edges.txt  car61_timing.ply  cmake_install.cmake  random_transform  random_transform.cpp  view_pcl.cpp
test/ply_test/: CMakeLists.txt  pcd_to_ply.py  pcl_to_ply.cpp
