cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(icp_gpu CUDA CXX)
enable_language(CUDA)
include(CheckLanguage)
check_language(CUDA)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(icp_gpu icp.cpp)
target_link_libraries(icp_gpu ${PCL_LIBRARIES})