cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
set(CMAKE_CUDA_COMPILER /usr/local/cuda/bin/nvcc)
project(ICP_HARDWARE_ACCEL LANGUAGES CUDA CXX)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(icp_gpu icp.cu)
set_target_properties(icp_gpu PROPERTIES CUDA_ARCHITECTURES "60;61;62")
target_link_libraries(icp_gpu ${PCL_LIBRARIES})