cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(ICP_HARDWAREACCEL)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(random_transform random_transform.cpp)
target_link_libraries(random_transform ${PCL_LIBRARIES})